jswt-parser/src/snapshots/jswt_parser__statement__test__parse_expression_statement.snap
---
source: jswt-parser/src/statement.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_expression_statement",
                    module: "module/test_parse_expression_statement",
                    start: 0,
                    end: 26,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_expression_statement",
                        module: "module/test_parse_expression_statement",
                        start: 0,
                        end: 26,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_expression_statement",
                                    module: "module/test_parse_expression_statement",
                                    start: 0,
                                    end: 26,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_expression_statement",
                                        module: "module/test_parse_expression_statement",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "main",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_expression_statement",
                                        module: "module/test_parse_expression_statement",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_expression_statement",
                                        module: "module/test_parse_expression_statement",
                                        start: 16,
                                        end: 26,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Expression(
                                                ExpressionStatement {
                                                    span: Span {
                                                        file: "test_parse_expression_statement",
                                                        module: "module/test_parse_expression_statement",
                                                        start: 18,
                                                        end: 24,
                                                    },
                                                    expression: Assignment(
                                                        BinaryExpression {
                                                            span: Span {
                                                                file: "test_parse_expression_statement",
                                                                module: "module/test_parse_expression_statement",
                                                                start: 18,
                                                                end: 23,
                                                            },
                                                            left: Identifier(
                                                                IdentifierExpression {
                                                                    span: Span {
                                                                        file: "test_parse_expression_statement",
                                                                        module: "module/test_parse_expression_statement",
                                                                        start: 18,
                                                                        end: 19,
                                                                    },
                                                                    ident: Identifier {
                                                                        span: Span {
                                                                            file: "test_parse_expression_statement",
                                                                            module: "module/test_parse_expression_statement",
                                                                            start: 18,
                                                                            end: 19,
                                                                        },
                                                                        value: "x",
                                                                    },
                                                                },
                                                            ),
                                                            op: Assign(
                                                                Span {
                                                                    file: "test_parse_expression_statement",
                                                                    module: "module/test_parse_expression_statement",
                                                                    start: 20,
                                                                    end: 21,
                                                                },
                                                            ),
                                                            right: Literal(
                                                                Integer(
                                                                    IntegerLiteral {
                                                                        span: Span {
                                                                            file: "test_parse_expression_statement",
                                                                            module: "module/test_parse_expression_statement",
                                                                            start: 22,
                                                                            end: 23,
                                                                        },
                                                                        value: 0,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
