jswt-parser/src/snapshots/jswt_parser__statement__test__parse_if_statement.snap
---
source: jswt-parser/src/statement.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_if_statement",
                    module: "module/test_parse_if_statement",
                    start: 0,
                    end: 63,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_if_statement",
                        module: "module/test_parse_if_statement",
                        start: 0,
                        end: 63,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_if_statement",
                                    module: "module/test_parse_if_statement",
                                    start: 0,
                                    end: 63,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_if_statement",
                                        module: "module/test_parse_if_statement",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "main",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_if_statement",
                                        module: "module/test_parse_if_statement",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_if_statement",
                                        module: "module/test_parse_if_statement",
                                        start: 16,
                                        end: 63,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            If(
                                                IfStatement {
                                                    span: Span {
                                                        file: "test_parse_if_statement",
                                                        module: "module/test_parse_if_statement",
                                                        start: 18,
                                                        end: 61,
                                                    },
                                                    condition: Equality(
                                                        BinaryExpression {
                                                            span: Span {
                                                                file: "test_parse_if_statement",
                                                                module: "module/test_parse_if_statement",
                                                                start: 21,
                                                                end: 27,
                                                            },
                                                            left: Identifier(
                                                                IdentifierExpression {
                                                                    span: Span {
                                                                        file: "test_parse_if_statement",
                                                                        module: "module/test_parse_if_statement",
                                                                        start: 21,
                                                                        end: 22,
                                                                    },
                                                                    ident: Identifier {
                                                                        span: Span {
                                                                            file: "test_parse_if_statement",
                                                                            module: "module/test_parse_if_statement",
                                                                            start: 21,
                                                                            end: 22,
                                                                        },
                                                                        value: "x",
                                                                    },
                                                                    ty: Unknown,
                                                                },
                                                            ),
                                                            op: Equal(
                                                                Span {
                                                                    file: "test_parse_if_statement",
                                                                    module: "module/test_parse_if_statement",
                                                                    start: 23,
                                                                    end: 25,
                                                                },
                                                            ),
                                                            right: Identifier(
                                                                IdentifierExpression {
                                                                    span: Span {
                                                                        file: "test_parse_if_statement",
                                                                        module: "module/test_parse_if_statement",
                                                                        start: 26,
                                                                        end: 27,
                                                                    },
                                                                    ident: Identifier {
                                                                        span: Span {
                                                                            file: "test_parse_if_statement",
                                                                            module: "module/test_parse_if_statement",
                                                                            start: 26,
                                                                            end: 27,
                                                                        },
                                                                        value: "y",
                                                                    },
                                                                    ty: Unknown,
                                                                },
                                                            ),
                                                            ty: Unknown,
                                                        },
                                                    ),
                                                    consequence: Block(
                                                        BlockStatement {
                                                            span: Span {
                                                                file: "test_parse_if_statement",
                                                                module: "module/test_parse_if_statement",
                                                                start: 29,
                                                                end: 42,
                                                            },
                                                            statements: StatementList {
                                                                statements: [
                                                                    Return(
                                                                        ReturnStatement {
                                                                            span: Span {
                                                                                file: "test_parse_if_statement",
                                                                                module: "module/test_parse_if_statement",
                                                                                start: 31,
                                                                                end: 40,
                                                                            },
                                                                            expression: Literal(
                                                                                Integer(
                                                                                    IntegerLiteral {
                                                                                        span: Span {
                                                                                            file: "test_parse_if_statement",
                                                                                            module: "module/test_parse_if_statement",
                                                                                            start: 38,
                                                                                            end: 39,
                                                                                        },
                                                                                        value: 0,
                                                                                        ty: Binding(
                                                                                            "i32",
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                            ),
                                                                        },
                                                                    ),
                                                                ],
                                                            },
                                                        },
                                                    ),
                                                    alternative: Some(
                                                        Block(
                                                            BlockStatement {
                                                                span: Span {
                                                                    file: "test_parse_if_statement",
                                                                    module: "module/test_parse_if_statement",
                                                                    start: 48,
                                                                    end: 61,
                                                                },
                                                                statements: StatementList {
                                                                    statements: [
                                                                        Return(
                                                                            ReturnStatement {
                                                                                span: Span {
                                                                                    file: "test_parse_if_statement",
                                                                                    module: "module/test_parse_if_statement",
                                                                                    start: 50,
                                                                                    end: 59,
                                                                                },
                                                                                expression: Literal(
                                                                                    Integer(
                                                                                        IntegerLiteral {
                                                                                            span: Span {
                                                                                                file: "test_parse_if_statement",
                                                                                                module: "module/test_parse_if_statement",
                                                                                                start: 57,
                                                                                                end: 58,
                                                                                            },
                                                                                            value: 1,
                                                                                            ty: Binding(
                                                                                                "i32",
                                                                                            ),
                                                                                        },
                                                                                    ),
                                                                                ),
                                                                            },
                                                                        ),
                                                                    ],
                                                                },
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
