jswt-parser/src/snapshots/jswt_parser__statement__test__parse_variable_statement.snap
---
source: jswt-parser/src/statement.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_variable_statement",
                    module: "module/test_parse_variable_statement",
                    start: 0,
                    end: 30,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_variable_statement",
                        module: "module/test_parse_variable_statement",
                        start: 0,
                        end: 30,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_variable_statement",
                                    module: "module/test_parse_variable_statement",
                                    start: 0,
                                    end: 30,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_variable_statement",
                                        module: "module/test_parse_variable_statement",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "main",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_variable_statement",
                                        module: "module/test_parse_variable_statement",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_variable_statement",
                                        module: "module/test_parse_variable_statement",
                                        start: 16,
                                        end: 30,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Variable(
                                                VariableStatement {
                                                    span: Span {
                                                        file: "test_parse_variable_statement",
                                                        module: "module/test_parse_variable_statement",
                                                        start: 18,
                                                        end: 28,
                                                    },
                                                    modifier: Let(
                                                        Span {
                                                            file: "test_parse_variable_statement",
                                                            module: "module/test_parse_variable_statement",
                                                            start: 18,
                                                            end: 21,
                                                        },
                                                    ),
                                                    target: Identifier(
                                                        Identifier {
                                                            span: Span {
                                                                file: "test_parse_variable_statement",
                                                                module: "module/test_parse_variable_statement",
                                                                start: 22,
                                                                end: 23,
                                                            },
                                                            value: "x",
                                                        },
                                                    ),
                                                    expression: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                span: Span {
                                                                    file: "test_parse_variable_statement",
                                                                    module: "module/test_parse_variable_statement",
                                                                    start: 26,
                                                                    end: 27,
                                                                },
                                                                value: 0,
                                                                ty: Binding(
                                                                    "i32",
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                    type_annotation: None,
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
