jswt-parser/src/snapshots/jswt_parser__statement__test__parse_variable_statement_with_type_annotation.snap
---
source: jswt-parser/src/statement.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_variable_statement_with_type_annotation",
                    module: "module/test_parse_variable_statement_with_type_annotation",
                    start: 0,
                    end: 16,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_variable_statement_with_type_annotation",
                        module: "module/test_parse_variable_statement_with_type_annotation",
                        start: 0,
                        end: 16,
                    },
                    source_elements: [
                        VariableDeclaration(
                            VariableDeclarationElement {
                                annotations: [],
                                export: false,
                                span: Span {
                                    file: "test_parse_variable_statement_with_type_annotation",
                                    module: "module/test_parse_variable_statement_with_type_annotation",
                                    start: 0,
                                    end: 16,
                                },
                                modifier: Let(
                                    Span {
                                        file: "test_parse_variable_statement_with_type_annotation",
                                        module: "module/test_parse_variable_statement_with_type_annotation",
                                        start: 0,
                                        end: 3,
                                    },
                                ),
                                name: Identifier {
                                    span: Span {
                                        file: "test_parse_variable_statement_with_type_annotation",
                                        module: "module/test_parse_variable_statement_with_type_annotation",
                                        start: 4,
                                        end: 5,
                                    },
                                    value: "x",
                                },
                                expression: Literal(
                                    Integer(
                                        IntegerLiteral {
                                            span: Span {
                                                file: "test_parse_variable_statement_with_type_annotation",
                                                module: "module/test_parse_variable_statement_with_type_annotation",
                                                start: 13,
                                                end: 15,
                                            },
                                            value: 99,
                                        },
                                    ),
                                ),
                                type_annotation: Some(
                                    TypeAnnotation {
                                        span: Span {
                                            file: "test_parse_variable_statement_with_type_annotation",
                                            module: "module/test_parse_variable_statement_with_type_annotation",
                                            start: 7,
                                            end: 10,
                                        },
                                        ty: Binding(
                                            "i32",
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
